--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -1,58 +1,56 @@
-.register-form-container form{
-    display: grid;
-    grid-template-areas: 
+.register-form-container form {
+  display: grid;
+  grid-template-areas:
     "input-one"
     "input-two"
     "button";
-    background-color: #f3f3f3;
-    padding: 2rem;
-    margin: 5rem auto;
-    align-items: center;
-    width: 40%;
-    border-radius: 5px;
+  background-color: #f3f3f3;
+  padding: 2rem;
+  margin: 5rem auto;
+  align-items: center;
+  width: 30%;
+  border-radius: 5px;
 }
 
-    .register-form input{
-        width: 100%;
-        border: none;
-        font-size: 2rem;
-        margin-bottom: 1rem;
-        height: 6rem;
-        border-radius: 5px;
-        background-color: white;
-        padding: 1rem;
-    }
-    .register-btn{
-        background-color: rgb(7, 207, 7);
-        border: none;
-        color: white;
-        cursor: pointer;
-        margin: 1rem 0;
-        font-size: 2rem;
-        height: 6rem;
-        border-radius: 5px;
-    }
-    .register-btn:hover{
-        background-color: rgb(10, 175, 10);
-    }
-    .sign-heading{
-        margin-bottom: 2rem;
-        text-align: left;
-        font-size: 2rem;
-    }
-    .message{
-        color: red;
-        font-size: 1.5rem;
-    }
-    .already-have{
-        font-size: 2rem;
-    }
+.register-form input {
+  width: 100%;
+  border: none;
+  font-size: 16px;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+  background-color: white;
+  padding: 1rem;
+}
+.register-btn {
+  background-color: #0071DC;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin: 1rem 0;
+  font-size: 2rem;
+  height: 5rem;
+  border-radius: 5px;
+}
+.sign-heading {
+  margin-bottom: 2rem;
+  text-align: center;
+  font-size: 16px;
+}
+.message {
+  color: red;
+  font-size: 14px;
+  margin-bottom: 2px;
+}
+.already-have {
+    text-align: center;
+    font-size: 16px;
+}
 
-    @media screen and (max-width: 750px) {
-        .register-form-container form{
-            width: 80%;
-        }
-        .already-have{
-            font-size: 1.5rem;
-        }
-    }
+@media screen and (max-width: 750px) {
+  .register-form-container form {
+    width: 80%;
+  }
+  .already-have {
+    font-size: 1.5rem;
+  }
+}
