--- a/src/components/hero-img/hero-img.css
+++ b/src/components/hero-img/hero-img.css
@@ -5,21 +5,14 @@
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    background-image: linear-gradient(
-        140deg, #FFFFFF00 0%, #EBEDEFDE 100%);
-}
-.home-left{
-    color: #415161;
-    /* width: 30%; */
-    grid-area: home-left;
-    
+
 }
 .home-left h5{
     font-size: 17px;
     padding: 3rem 0 0;
 }
 .home-left h1{
-    font-size: 60px;
+    font-size: 50px;
     line-height: 7rem;
     padding: 3rem 0;
 }
@@ -30,7 +23,7 @@
 
 .home-left button{
     color: white;
-    background-color: #F80000;
+    background-color: #0071DC;
     border: none;
     padding: 0.6em;
     border-radius: 5px;
@@ -40,7 +33,7 @@
     cursor: pointer;
 }
 .home-left button:hover{
-    background-color: #b60909;
+    background-color: #0071DC;
 }
 .home-right{
     grid-area: home-right;
