--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,16 +2,15 @@
 
 footer {
   font-family: "Saira", sans-serif;
-  background-image: linear-gradient(
-    140deg, #FFFFFF00 0%, #EBEDEFDE 100%);
+  background-color: rgb(34, 34, 34);
     padding-top: 3rem;
 }
 
 .footer-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  color: black
+  color: rgb(255, 255, 255)
 }
 .footer-logo{
     width: 100px;
@@ -26,14 +25,9 @@ footer {
 }
 
 .footerIcons i {
-  font-size: 1.3rem;
-  color: black;
+  font-size: 17px;
+  color: rgb(255, 255, 255);
   padding-right: 2rem;
-  transition: 0.5s;
-}
-
-.footerIcons a:hover i {
-  transform: scale(1.2);
 }
 
 .footer-contactUs {
@@ -56,7 +50,8 @@ footer {
   text-align: center;
   margin: 0;
   padding-bottom: 1rem;
-  color: black;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
 }
 
 @media screen and (max-width: 570px) {
