--- a/src/components/cart-dropdown/cart-dropdown.css
+++ b/src/components/cart-dropdown/cart-dropdown.css
@@ -1,33 +1,35 @@
+
+* {
+    text-decoration: none;
+}
 .cart-dropdown {
     position: absolute;
-    width: 240px;
+    width: 350px;
     height: 340px;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    border: 1px solid black;
+    border: 2px solid #0072dc94;
+    border-top: none;
     background-color: white;
-    top: 50px;
-    right: 10px;
+    top: 100px;
+    right: 0px;
     z-index: 5;
 }
 .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
+
 }
   
 .cart-dropdown button {
-  height: 50px;
-  letter-spacing: 0.5px;
-  padding: 0 35px 0 35px;
+  height: 40px;
+  padding: 5px 65px;
   font-size: 15px;
-  background-color: black;
+  background-color: #0071DC;
   color: white;
-  text-transform: uppercase;
-  font-family: 'Open Sans Condensed';
-  font-weight: bolder;
   border: none;
   cursor: pointer;
   display: flex;
@@ -37,14 +39,9 @@
   align-items: center;
   margin: 0 auto;
   margin-top: 1rem;
-  
+  border-radius: 10px;
 }
-.cart-dropdown button:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
-   
-}
+
 .empty-message{
     font-size: 18px;
     margin: 15px auto;
