--- a/src/components/checkout-form/checkout-form.css
+++ b/src/components/checkout-form/checkout-form.css
@@ -4,15 +4,14 @@
     padding: 1.25rem;
     display: flex;
     flex-direction: column;
-    text-align: center;
-    background-color: #415161;
-    color: white;
+    text-align: left;
+    color: black;
     border-radius: 5px;
   }
   .checkout-form-container label {
     font-size: 16px;
     display: block;
-    text-align: center;
+    text-align: left;
     justify-content: center;
   }
   .checkout-btn {
