--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,79 +1,95 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Saira:wght@200&display=swap");
-
 footer {
-  font-family: "Saira", sans-serif;
-  background-color: rgb(34, 34, 34);
-    padding-top: 3rem;
+  background-color: #555;
+  color: #bbb;
+  line-height: 1.5;
+}
+footer a {
+  text-decoration: none;
+  color: #eee;
+}
+a:hover {
+  text-decoration: underline;
+}
+.ft-title {
+  color: #fff;
+  font-family: "Merriweather", serif;
+  font-size: 1.375rem;
+  padding-bottom: 0.625rem;
 }
 
-.footer-container {
+body {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  color: rgb(255, 255, 255)
-}
-.footer-logo{
-    width: 100px;
-}
-
-.footer-container img {
-  width: 100px;
-}
-
-.footerIcons {
-  margin: 2rem 0;
-}
-
-.footerIcons i {
-  font-size: 17px;
-  color: rgb(255, 255, 255);
-  padding-right: 2rem;
-}
-
-.footer-contactUs {
-  display: flex;
-  justify-content: space-between;
+  min-height: 100vh;
   flex-direction: column;
-  margin-top: 1.5rem;
-  text-align: center;
+}
+.container {
+  flex: 1;
+}
+.ft-main {
+  padding: 1.25rem 1.875rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+@media only screen and (min-width: 29.8125rem /* 477px */) {
+  .ft-main {
+    justify-content: space-evenly;
+  }
+}
+@media only screen and (min-width: 77.5rem /* 1240px */) {
+  .ft-main {
+    justify-content: space-evenly;
+  }
+}
+.ft-main-item {
+  padding: 1.25rem;
+  min-width: 12.5rem;
 }
 
-.contatUsTitle {
-  font-family: "Saira", sans-serif;
+form {
+  display: flex;
+  flex-wrap: wrap;
+}
+input[type="email"] {
+  border: 0;
+  padding: 0.625rem;
+  margin-top: 0.3125rem;
+}
+input[type="submit"] {
+  background-color: #00d188;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+  padding: 0.625rem 0.9375rem;
+  margin-top: 0.3125rem;
 }
 
-.footer-contact-info p {
-  line-height: 3;
+.ft-social {
+  padding: 0 1.875rem 1.25rem;
+}
+.ft-social-list {
+  display: flex;
+  justify-content: center;
+  border-top: 1px #777 solid;
+  padding-top: 1.25rem;
+}
+.ft-social-list li {
+  margin: 0.5rem;
+  font-size: 1.25rem;
 }
 
-.copyright {
-  text-align: center;
-  margin: 0;
-  padding-bottom: 1rem;
-  color: rgb(255, 255, 255);
-  font-size: 16px;
+.ft-legal {
+  padding: 0.9375rem 1.875rem;
+  background-color: #333;
 }
-
-@media screen and (max-width: 570px) {
-  .footer-container {
-    font-size: 0.8rem;
-  }
-
-  .footerIcons i {
-    font-size: 1rem;
-    padding-right: 1rem;
-  }
-
-  .footer-container img {
-    width: 75px;
-  }
-
-  .logo-and-icons-container {
-    width: 30%;
-  }
-
-  .footer-contactUs {
-    align-self: flex-start;
-    margin-top: 3rem;
-  }
+.ft-legal-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.ft-legal-list li {
+  margin: 0.125rem 0.625rem;
+  white-space: nowrap;
+}
+.ft-legal-list li:nth-last-child(2) {
+    flex: 1;
 }
