edit list style

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,6 +3,9 @@ footer {
   color: rgb(255, 255, 255);
   line-height: 1.5;
 }
+ul {
+  list-style: none;
+}
 footer a {
   text-decoration: none;
   color: #eee;
