--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 html{
-    font-size: 62.5%;
-}
-hr{
-    width: 5%;
-    margin: 2rem auto;
-    background: #AB1414;
-    border-width: 1.5px;
-    border-color: #AB1414;
-    
+    font-size: 69%;
 }
